// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a Gradient 1`] = `
<View
  style={null}
>
  <BVLinearGradient
    colors={
      Array [
        "#f9f9f9",
        "#ededed",
      ]
    }
    end={
      Object {
        "x": 0.9999999999999999,
        "y": -2.220446049250313e-16,
      }
    }
    locations={
      Array [
        0,
        1,
      ]
    }
    start={
      Object {
        "x": 1,
        "y": 1,
      }
    }
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  />
</View>
`;

exports[`renders a Gradient and uses array prop styles 1`] = `
<View
  style={
    Array [
      Object {
        "height": 200,
      },
      Object {
        "width": 200,
      },
    ]
  }
>
  <BVLinearGradient
    colors={
      Array [
        "#f9f9f9",
        "#ededed",
      ]
    }
    end={
      Object {
        "x": 0.9999999999999999,
        "y": -2.220446049250313e-16,
      }
    }
    locations={
      Array [
        0,
        1,
      ]
    }
    start={
      Object {
        "x": 1,
        "y": 1,
      }
    }
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  />
</View>
`;

exports[`renders a Gradient and uses prop styles 1`] = `
<View
  style={
    Object {
      "height": 200,
      "width": 200,
    }
  }
>
  <BVLinearGradient
    colors={
      Array [
        "#f9f9f9",
        "#ededed",
      ]
    }
    end={
      Object {
        "x": 0.9999999999999999,
        "y": -2.220446049250313e-16,
      }
    }
    locations={
      Array [
        0,
        1,
      ]
    }
    start={
      Object {
        "x": 1,
        "y": 1,
      }
    }
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  />
</View>
`;

exports[`renders a Gradient with an angle (-45) 1`] = `
<View
  style={null}
>
  <BVLinearGradient
    colors={
      Array [
        "#f9f9f9",
        "#ededed",
      ]
    }
    end={
      Object {
        "x": -2.220446049250313e-16,
        "y": 0,
      }
    }
    locations={
      Array [
        0,
        1,
      ]
    }
    start={
      Object {
        "x": 1,
        "y": 1,
      }
    }
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  />
</View>
`;

exports[`renders a Gradient with an angle (45) 1`] = `
<View
  style={null}
>
  <BVLinearGradient
    colors={
      Array [
        "#f9f9f9",
        "#ededed",
      ]
    }
    end={
      Object {
        "x": 1,
        "y": -2.220446049250313e-16,
      }
    }
    locations={
      Array [
        0,
        1,
      ]
    }
    start={
      Object {
        "x": 0,
        "y": 1,
      }
    }
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  />
</View>
`;

exports[`renders a Gradient with an angle (90) 1`] = `
<View
  style={null}
>
  <BVLinearGradient
    colors={
      Array [
        "#f9f9f9",
        "#ededed",
      ]
    }
    end={
      Object {
        "x": 1.0000000000000002,
        "y": 0.9999999999999999,
      }
    }
    locations={
      Array [
        0,
        1,
      ]
    }
    start={
      Object {
        "x": 0,
        "y": 1,
      }
    }
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  />
</View>
`;

exports[`renders a Gradient with an angle (180) 1`] = `
<View
  style={null}
>
  <BVLinearGradient
    colors={
      Array [
        "#f9f9f9",
        "#ededed",
      ]
    }
    end={
      Object {
        "x": 1.8369701987210317e-16,
        "y": 1.000000000000001,
      }
    }
    locations={
      Array [
        0,
        1,
      ]
    }
    start={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  />
</View>
`;

exports[`renders a Gradient with an angle (270) 1`] = `
<View
  style={null}
>
  <BVLinearGradient
    colors={
      Array [
        "#f9f9f9",
        "#ededed",
      ]
    }
    end={
      Object {
        "x": 6.661338147750939e-16,
        "y": 2.449293598294705e-16,
      }
    }
    locations={
      Array [
        0,
        1,
      ]
    }
    start={
      Object {
        "x": 1,
        "y": 0,
      }
    }
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  />
</View>
`;
